--- a/APPLICATION/package.json
+++ b/APPLICATION/package.json
@@ -6,10 +6,18 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-	"test": "jest"
+    "test": "jest"
   },
-  "jest": { "projects": [ { "preset": "jest-expo/ios" }, { "preset": "jest-expo/android"}] },
-  
+  "jest": {
+    "projects": [
+      {
+        "preset": "jest-expo/ios"
+      },
+      {
+        "preset": "jest-expo/android"
+      }
+    ]
+  },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
