--- a/APPLICATION/package.json
+++ b/APPLICATION/package.json
@@ -26,6 +26,7 @@
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "jest-expo": "^40.0.2",
+    "jest-expo-enzyme": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
